Delete Group system (#15)
* Add tests

* Add orders_test

* Fix Makefile

* Fix

* Add docs and examples

* Fix

* Delete Group system

* 'Admin', 'Register', 'Normal' を廃止し、Register -> true/false に変更

* Fix bug
